modify clock from css to sass

--- a/miao/clock.html
+++ b/miao/clock.html
@@ -27,6 +27,66 @@
 			<div class="d10"><span>X</span></div>
 			<div class="d11"><span>XI</span></div>
 			<div class="d12"><span>XII</span></div>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
+			<main class="scale">|</main>
 		</div>
 		<!--		------------------------------------------------------------------>
 		<div class="box hour-needle-box">
