--- a/miao/noi.html
+++ b/miao/noi.html
@@ -14,7 +14,7 @@
     let n1 = +prompt('输入第一个数')
     let n2 = +prompt('输入第二个数')
     let n3 = +prompt('输入第三个数')
-    console.log((n1+n2)/n3)
+    console.log(Math.floor((n1+n2)/n3))
 </script>
 <script id="ch0103/04">
     let n1 = +prompt('输入除数')
@@ -30,8 +30,9 @@
 <script id="ch0103/06">
     let n1 = +prompt('输入确诊数')
     let n2 = +prompt('输入死亡数')
-    console.log(Number(n2/n1).toFixed(3)+"")
+    console.log(Number(n2/n1*100).toFixed(3)+"%")
 </script>
+<!--FIXME-->
 <script id="ch0103/07">
     let a = +prompt('输入a')
     let b = +prompt('输入b')
@@ -47,7 +48,7 @@
 <script id="ch0103/09">
     let r = +prompt('输入半径')
     console.log(Number(2*r).toFixed(4))
-    console.log(Number(2*Math.PI*r).toFixed(4))
+    console.log(Number(2*Math.PI*r).toFixed(5))
     console.log(Number(Math.PI*Math.pow(r,2)).toFixed(4))
 </script>
 <script id="ch0103/10">
@@ -55,7 +56,6 @@
     let r2 = +prompt('输入阻值r2')
     console.log(Number(1/(1/r1+1/r2)).toFixed(2))
 </script>
-FIXME
 <script id="ch0103/11">
     let a = +prompt('输入a')
     let b = +prompt('输入b')
@@ -65,6 +65,7 @@ FIXME
     let r = +prompt('输球半径')
     console.log(Number(4/3*3.14*Math.pow(r,3)).toFixed(2))
 </script>
+<!--FIXME-->
 <script id="ch0103/13">
     let r = +prompt('输入一个三位数')
     console.log(''+r%10+Number(r%100/10).toFixed(0)+Number(r/100).toFixed(0))
@@ -88,6 +89,7 @@ FIXME
     let y2 = +prompt('输入点2y轴坐标')
     console.log(Math.sqrt(Math.pow(x1-x2,2)+Math.pow(y1-y2,2)).toFixed(3))
 </script>
+<!--FIXME-->
 <script id="ch0103/17">
     let x1 = +prompt('输入点1x轴坐标')
     let y1 = +prompt('输入点1y轴坐标')
