--- a/miao/noi.html
+++ b/miao/noi.html
@@ -32,7 +32,7 @@
     let n2 = +prompt('输入死亡数')
     console.log(Number(n2/n1*100).toFixed(3)+"%")
 </script>
-<!--FIXME-->
+<!--TODO-->
 <script id="ch0103/07">
     let a = +prompt('输入a')
     let b = +prompt('输入b')
@@ -48,7 +48,7 @@
 <script id="ch0103/09">
     let r = +prompt('输入半径')
     console.log(Number(2*r).toFixed(4))
-    console.log(Number(2*Math.PI*r).toFixed(5))
+    console.log(Number(2*3.14159*r).toFixed(4))
     console.log(Number(Math.PI*Math.pow(r,2)).toFixed(4))
 </script>
 <script id="ch0103/10">
@@ -65,7 +65,6 @@
     let r = +prompt('输球半径')
     console.log(Number(4/3*3.14*Math.pow(r,3)).toFixed(2))
 </script>
-<!--FIXME-->
 <script id="ch0103/13">
     let r = +prompt('输入一个三位数')
     console.log(''+r%10+Number(r%100/10).toFixed(0)+Number(r/100).toFixed(0))
@@ -89,7 +88,6 @@
     let y2 = +prompt('输入点2y轴坐标')
     console.log(Math.sqrt(Math.pow(x1-x2,2)+Math.pow(y1-y2,2)).toFixed(3))
 </script>
-<!--FIXME-->
 <script id="ch0103/17">
     let x1 = +prompt('输入点1x轴坐标')
     let y1 = +prompt('输入点1y轴坐标')
@@ -97,7 +95,7 @@
     let y2 = +prompt('输入点2y轴坐标')
     let x3 = +prompt('输入点3x轴坐标')
     let y3 = +prompt('输入点3y轴坐标')
-    console.log(1/2*((x1*y2-x2*y1)+(x2*y3-x3*y2)+(x3*y1-x1*y3)).toFixed(2))
+    console.log((1/2*((x1*y2-x2*y1)+(x2*y3-x3*y2)+(x3*y1-x1*y3))).toFixed(2))
 </script>
 <script id="ch0103/18">
     let a1 = +prompt('输入第一项')
