--- a/miao/noi.html
+++ b/miao/noi.html
@@ -2,83 +2,82 @@
 <script id="ch0103/01">
     let n1 = +prompt('输入第一个数')
     let n2 = +prompt('输入第二个数')
-    console.log(n1+n2)
+    console.log(n1 + n2)
 </script>
 <script id="ch0103/02">
     let n1 = +prompt('输入第一个数')
     let n2 = +prompt('输入第二个数')
     let n3 = +prompt('输入第三个数')
-    console.log((n1+n2)*n3)
+    console.log((n1 + n2) * n3)
 </script>
 <script id="ch0103/03">
     let n1 = +prompt('输入第一个数')
     let n2 = +prompt('输入第二个数')
     let n3 = +prompt('输入第三个数')
-    console.log(Math.floor((n1+n2)/n3))
+    console.log(Math.floor((n1 + n2) / n3))
 </script>
 <script id="ch0103/04">
     let n1 = +prompt('输入除数')
     let n2 = +prompt('输入被除数')
-    console.log(Number(n1/n2).toFixed(0))
-    console.log(n1%n2)
+    console.log(Number(n1 / n2).toFixed(0))
+    console.log(n1 % n2)
 </script>
 <script id="ch0103/05">
     let n1 = +prompt('输入分子')
     let n2 = +prompt('输入分母')
-    console.log(Number(n1/n2).toFixed(9))
+    console.log(Number(n1 / n2).toFixed(9))
 </script>
 <script id="ch0103/06">
     let n1 = +prompt('输入确诊数')
     let n2 = +prompt('输入死亡数')
-    console.log(Number(n2/n1*100).toFixed(3)+"%")
+    console.log(Number(n2 / n1 * 100).toFixed(3) + "%")
 </script>
-<!--TODO-->
 <script id="ch0103/07">
+    let x = +prompt('输入x')
     let a = +prompt('输入a')
     let b = +prompt('输入b')
     let c = +prompt('输入c')
     let d = +prompt('输入d')
-    let x = +prompt('输入x')
-    console.log((a*Math.pow(x,3)+b*Math.pow(x,2)+c*x+d).toFixed(7))
+    console.log((a * x**3 + b * x**2 + c * x + d).toFixed(7))
 </script>
 <script id="ch0103/08">
     let a = +prompt('输入一个华氏度')
-    console.log(Number(5*(a-32)/9).toFixed(5))
+    console.log(Number(5 * (a - 32) / 9).toFixed(5))
 </script>
 <script id="ch0103/09">
     let r = +prompt('输入半径')
-    console.log(Number(2*r).toFixed(4))
-    console.log(Number(2*3.14159*r).toFixed(4))
-    console.log(Number(Math.PI*Math.pow(r,2)).toFixed(4))
+    console.log(Number(2 * r).toFixed(4))
+    console.log(Number(2 * 3.14159 * r).toFixed(4))
+    console.log(Number(Math.PI * Math.pow(r, 2)).toFixed(4))
 </script>
 <script id="ch0103/10">
     let r1 = +prompt('输入阻值r1')
     let r2 = +prompt('输入阻值r2')
-    console.log(Number(1/(1/r1+1/r2)).toFixed(2))
+    console.log(Number(1 / (1 / r1 + 1 / r2)).toFixed(2))
 </script>
 <script id="ch0103/11">
     let a = +prompt('输入a')
     let b = +prompt('输入b')
-    console.log(Number(a%b).toFixed(4))
+    console.log(Number(a % b).toFixed(4))
 </script>
 <script id="ch0103/12">
     let r = +prompt('输球半径')
-    console.log(Number(4/3*3.14*Math.pow(r,3)).toFixed(2))
+    console.log(Number(4 / 3 * 3.14 * Math.pow(r, 3)).toFixed(2))
 </script>
 <script id="ch0103/13">
     let r = +prompt('输入一个三位数')
-    console.log(''+r%10+Number(r%100/10).toFixed(0)+Number(r/100).toFixed(0))
+    console.log('' + r % 10 + Number(r % 100 / 10).toFixed(0) + Number(r / 100).toFixed(0))
 </script>
 <script id="ch0103/14">
     let h = +prompt('输入桶深')
     let r = +prompt('输入底面半径')
-    console.log(Math.ceil(20/(3.14159*r*r*h/1000)))
+    console.log(Math.ceil(20 / (3.14159 * r * r * h / 1000)))
 </script>
 <script id="ch0103/15">
     let n = +prompt('输入苹果数量')
     let x = +prompt('输入虫子效率')
     let y = +prompt('输入经过时间')
-    console.log(n-Math.ceil(y/x))
+    console.log(n - Math.ceil(y / x))
 </script>
 
 <script id="ch0103/16">
@@ -86,7 +85,7 @@
     let y1 = +prompt('输入点1y轴坐标')
     let x2 = +prompt('输入点2x轴坐标')
     let y2 = +prompt('输入点2y轴坐标')
-    console.log(Math.sqrt(Math.pow(x1-x2,2)+Math.pow(y1-y2,2)).toFixed(3))
+    console.log(Math.sqrt(Math.pow(x1 - x2, 2) + Math.pow(y1 - y2, 2)).toFixed(3))
 </script>
 <script id="ch0103/17">
     let x1 = +prompt('输入点1x轴坐标')
@@ -95,21 +94,81 @@
     let y2 = +prompt('输入点2y轴坐标')
     let x3 = +prompt('输入点3x轴坐标')
     let y3 = +prompt('输入点3y轴坐标')
-    console.log((1/2*((x1*y2-x2*y1)+(x2*y3-x3*y2)+(x3*y1-x1*y3))).toFixed(2))
+    console.log((1 / 2 * ((x1 * y2 - x2 * y1) + (x2 * y3 - x3 * y2) + (x3 * y1 - x1 * y3))).toFixed(2))
 </script>
 <script id="ch0103/18">
     let a1 = +prompt('输入第一项')
     let a2 = +prompt('输入第二项')
     let n = +prompt('输入求第几项')
-    let d = a2-a1
-    console.log(a1+(n-1)*d)
+    let d = a2 - a1
+    console.log(a1 + (n - 1) * d)
 </script>
 <script id="ch0103/19">
     let a1 = +prompt('输入第一项')
     let a2 = +prompt('输入第二项')
-    console.log(a1*a2)
+    console.log(a1 * a2)
 </script>
 <script id="ch0103/20">
     let a2 = +prompt('输入指数')
-    console.log(Math.pow(2,a2))
+    console.log(Math.pow(2, a2))
+</script>
+<script id="ch0104/01">
+    let tmp = +prompt('number :')
+    if (tmp > 0) console.log('positive')
+    else if (tmp < 0) console.log('negative')
+    else console.log('zero')
+</script>
+<script id="ch0104/02">
+    let tmp = +prompt('number:')
+    console.log(Math.abs(tmp))
+</script>
+<script id="ch0104/03">
+    let tmp = +prompt('number:')
+    console.log(tmp % 2 === 0 ? 'even' : 'odd')
+</script>
+<script id="ch0104/04">
+		let tmp = prompt('a character:')
+    console.log(tmp.charCodeAt()%2===0?'NO':'YES')
+</script>
+<script id="ch0104/05">
+    let tmp = +prompt('number1:')
+    let tmp2 = +prompt('number2:')
+    console.log(tmp>tmp2?'>':tmp<tmp2?'<':'=')
+</script>
+<script id="ch0104/06">
+    let tmp = +prompt('number1:')
+    console.log(tmp>10?1:0)
+</script>
+<script id="ch0104/07">
+    let tmp = +prompt('number1:')
+    let tmp2 = +prompt('number2:')
+    if(tmp>=10 || tmp2>=20) console.log(1)
+    else console.log(0)
+</script>
+<script id="ch0104/08">
+    let tmp = +prompt('number1:')
+    if(tmp%3===0 && tmp%5===0) console.log('YES')
+    else console.log('NO')
+</script>
+<script id="ch0104/09">
+	let str='',flag  = 0,num = +prompt('number1:')
+	if(num%3===0){
+	    str+='3'
+			flag++
+	}
+	if(num%5===0){
+	    str+=flag?' 5':'5'
+			flag++
+	}
+	if(num%7===0){
+	    str+=' 7'
+			flag++
+	}
+  console.log(flag>1?str:num)
+</script>
+<script id="ch0104/10">
+    let tmp = +prompt('number1:')
+    let tmp2 = +prompt('number2:')
+    if(tmp+tmp2<120) console.log(1)
+    else console.log(0)
 </script>
