--- a/miao/noi.html
+++ b/miao/noi.html
@@ -210,26 +210,36 @@
     else console.log('no')
 </script>
 <script id="ch0104/17">
-		let year =+prompt('year:')
-		if(year%400===0||year%4===0&&year%100!==0) console.log('Y')
-		else console.log('N')
+    let year = +prompt('year:')
+    if (year % 400 === 0 || year % 4 === 0 && year % 100 !== 0) console.log('Y')
+    else console.log('N')
 </script>
 <script id="ch0104/18">
-		let x = +prompt('pos x:')	,y=+prompt('pos y:')
-		if(x>1||x<-1||y>1||y<-1) console.log('no')
-		else console.log('yes')
+    let x = +prompt('pos x:'), y = +prompt('pos y:')
+    if (x > 1 || x < -1 || y > 1 || y < -1) console.log('no')
+    else console.log('yes')
 </script>
 <script id="ch0104/19">
-	let num1 =+prompt('number1:')	,num2=+prompt('number2'),operator=prompt('operator:')
-	if(['*','+','-','/'].includes(operator)){
-      console.log(eval(num1+operator+num2))
-	}else console.log('Invalid operator')
+    let num1 = +prompt('number1:'), num2 = +prompt('number2'), operator = prompt('operator:')
+    if (['*', '+', '-', '/'].includes(operator)) {
+        console.log(eval(num1 + operator + num2))
+    } else console.log('Invalid operator')
 </script>
-<!--TODO-->
 <script id="ch0104/20">
-
+    //(-b±Math.sqrt(b*b-4*a*c))/(2*a)
+    let a = +prompt('number a '), b = +prompt('number b '), c = +prompt('number c'), str = '',
+        delta_sq = Math.sqrt(b * b - 4 * a * c)
+    if (b ** 2 === 4 * a * c) {
+        str = `x1=x2=${(-b - delta_sq / (2 * a))}`
+    } else if (b ** 2 > 4 * a * c) {
+        str = `x1=${(-b - delta_sq / (2 * a))};x2=${(-b + delta_sq / (2 * a))}`
+    } else if (b ** 2 < 4 * a * c) {
+        let x = -b / (2 * a), i = Math.sqrt(4 * a * c - b * b) / (2 * a)
+        str = `x1=${x.toFixed(5)}+${i.toFixed(5)}i;x2=${x.toFixed(5)}-${i.toFixed(5)}i`
+    }
+    console.log(str)
 </script>
 <script id="ch0104/21">
-	let n = +prompt('number n:'),x = +prompt('number x:'),y = +prompt('number y:')
-  console.log(Math.trunc(n-y/x))
+    let n = +prompt('number n:'), x = +prompt('number x:'), y = +prompt('number y:')
+    console.log(Math.trunc(n - y / x))
 </script>
