--- a/miao/noi.html
+++ b/miao/noi.html
@@ -243,3 +243,75 @@
     let n = +prompt('number n:'), x = +prompt('number x:'), y = +prompt('number y:')
     console.log(Math.trunc(n - y / x))
 </script>
+<script id="ch0105/01">
+    let count = +prompt('number of students:'), total = 0
+    for (let i = 1; i <= count; i++) {
+        total += +prompt(`he's age`)
+    }
+    console.log((total / count).toFixed(2))
+</script>
+<script id="ch0105/02">
+    let total = 0
+    for (let i = 1; i <= 12; i++) {
+        total += +prompt(`请输入${i}月结余`)
+    }
+    console.log('$' + (total / 12).toFixed(2))
+</script>
+<script id="ch0105/03">
+		let count =+prompt(`specimen count:`),total=0
+
+    for (let i = 0; i < count; i++) {
+		    total+=+prompt(`specimen number${i}:`)
+    }
+    console.log((total/count).toFixed(4))
+</script>
+<script id="ch0105/04">
+    let count =+prompt(`numbers count:`),total=0
+    for (let i = 0; i < count; i++) {
+        total+=+prompt(`specimen number${i}:`)
+    }
+    console.log(`${total} ${(total/count).toFixed(5)}`)
+</script>
+<script id="ch0105/05">
+
+</script>
+<script id="ch0105/06"></script>
+<script id="ch0105/07"></script>
+<script id="ch0105/08"></script>
+<script id="ch0105/09"></script>
+<script id="ch0105/10"></script>
+<script id="ch0105/11"></script>
+<script id="ch0105/12"></script>
+<script id="ch0105/13"></script>
+<script id="ch0105/14"></script>
+<script id="ch0105/15"></script>
+<script id="ch0105/16"></script>
+<script id="ch0105/17"></script>
+<script id="ch0105/18"></script>
+<script id="ch0105/19"></script>
+<script id="ch0105/20"></script>
+<script id="ch0105/21"></script>
+<script id="ch0105/22"></script>
+<script id="ch0105/23"></script>
+<script id="ch0105/24"></script>
+<script id="ch0105/25"></script>
+<script id="ch0105/26"></script>
+<script id="ch0105/27"></script>
+<script id="ch0105/28"></script>
+<script id="ch0105/29"></script>
+<script id="ch0105/30"></script>
+<script id="ch0105/31"></script>
+<script id="ch0105/32"></script>
+<script id="ch0105/33"></script>
+<script id="ch0105/34"></script>
+<script id="ch0105/35"></script>
+<script id="ch0105/36"></script>
+<script id="ch0105/37"></script>
+<script id="ch0105/38"></script>
+<script id="ch0105/39"></script>
+<script id="ch0105/40"></script>
+<script id="ch0105/41"></script>
+<script id="ch0105/42"></script>
+<script id="ch0105/43"></script>
+<script id="ch0105/44"></script>
+<script id="ch0105/45"></script>
