--- a/miao/noi.html
+++ b/miao/noi.html
@@ -258,25 +258,43 @@
     console.log('$' + (total / 12).toFixed(2))
 </script>
 <script id="ch0105/03">
-		let count =+prompt(`specimen count:`),total=0
+    let count = +prompt(`specimen count:`), total = 0
 
     for (let i = 0; i < count; i++) {
-		    total+=+prompt(`specimen number${i}:`)
+        total += +prompt(`specimen number${i}:`)
     }
-    console.log((total/count).toFixed(4))
+    console.log((total / count).toFixed(4))
 </script>
 <script id="ch0105/04">
-    let count =+prompt(`numbers count:`),total=0
+    let count = +prompt(`numbers count:`), total = 0
     for (let i = 0; i < count; i++) {
-        total+=+prompt(`specimen number${i}:`)
+        total += +prompt(`specimen number${i}:`)
     }
-    console.log(`${total} ${(total/count).toFixed(5)}`)
+    console.log(`${total} ${(total / count).toFixed(5)}`)
 </script>
 <script id="ch0105/05">
+    let count = +prompt(`numbers of student:`), max = 0
+
+    for (let i = 0; i < count; i++) {
+        let current = +prompt(`score${i + 1}`)
+        max = max > current ? max : current
+    }
+    console.log(max)
+</script>
+<script id="ch0105/06">
+    let count = +prompt(`numbers of sequences:`), max = 0, min = 0
+
+    for (let i = 0; i < count; i++) {
+        let current = +prompt(`sequence${i + 1}`)
+        max = max > current ? max : current
+        min = min < current ? min : current
+    }
+    console.log(max-min)
 
 </script>
-<script id="ch0105/06"></script>
-<script id="ch0105/07"></script>
+<script id="ch0105/07">
+
+</script>
 <script id="ch0105/08"></script>
 <script id="ch0105/09"></script>
 <script id="ch0105/10"></script>
