--- a/miao/noi.html
+++ b/miao/noi.html
@@ -456,23 +456,126 @@
             break
         }
     }
-    console.log(mom_total * interest+last_balance)
+    console.log(mom_total * interest + last_balance)
 </script>
 <script id="ch0105/23">
+    let m = +prompt('m'), n = +prompt('n'), count = 0
+    for (let i = 0; i < n; i++) {
+        let wish = +prompt('take you needs')
+
+        if (m < wish) count++
+        else {
+            m -= wish
+        }
+    }
+    console.log(count)
+</script>
+<script id="ch0105/24">
+    let n = +prompt('n'), normal = 0
+    for (let i = 0; i < n; i++) {
+        let x = +prompt('?'), y = +prompt('?')
+        if (x <= 140 && x >= 90 && y >= 60 && y <= 90) normal++
+        else normal = 0
+    }
+    console.log(normal)
+</script>
+<script id="ch0105/25">
+    <!--	TODO-->
+</script>
+<script id="ch0105/26">
+    let n = +prompt('n'), count = 0
+    for (let i = 0; i < n; i++) {
+        let x = prompt('?')
+        if (x[3] - x[0] - x[1] - x[2] > 0) {
+            count++
+        }
+    }
+    console.log(count)
+</script>
+<script id="ch0105/27">
+    let k = +prompt('?'), total = 0, n = 0
+    for (let i = 1; ; i++) {
+        total += 1 / i
+        if (k < total) {
+            n = i
+            break
+        }
+    }
+    console.log(n)
+</script>
+<script id="ch0105/28">
+    let number = +prompt('number'), tail = 0
+    do {
+        tail = number % 10
+        number = (number - tail) / 10
+        console.log(tail)
+    } while (number !== 0)
+</script>
+<script id="ch0105/29">
+    let number = +prompt('number'), tail = 0, result = ''
+    if (number === 0) console.log(number)
+    if (number < 0) {
+        result += '-'
+        number = Math.abs(number)
+    }
+    do {
+        tail = number % 10
+        number = (number - tail) / 10
+        if (tail !== 0) result += tail
+    } while (number !== 0)
+    console.log(result)
+</script>
+<script id="ch0105/30">
+    let m = +prompt('m'), k = +prompt('k'), count = 0
+    if (m % 19 !== 0) console.log('NO')
+    do {
+        let tail = m % 10
+        m = (m - tail) / 10
+        if (tail === k) count++
+    } while (m !== 0)
+    if (count >= 3) console.log('YES')
+</script>
+<script id="ch0105/31">
+    let N = +prompt('n'), M = +prompt('m')
+    for (let i = 1; i <= N; i++) {
+        let light = 0
+        for (let j = 2; j <= M; j++) {
+            if (j === 2 && i % j === 0) light = 1
+            else if (i % j === 0) light = light ? 0 : 1
+        }
+        if (!light) console.log(i)
+    }
+</script>
+<script id="ch0105/32">
+    let q1 = 2, p1 = 1, n = +prompt('n'), q_current = q1, p_current = p1, result = q1 / p1
+    for (let i = 2; i <= n; i++) {
+        [q_current, p_current] = [q_current + p_current, q_current]
+        result += q_current / p_current
+    }
+    console.log(result.toFixed(4))
+</script>
+<script id="ch0105/33">
+    let n = +prompt('n'), result = 0
+    for (let i = 1; i <= n; i++) {
+        if (i % 2 !== 0) result = result + 1 / i
+        else result = result - 1 / i
+    }
+    console.log(result.toFixed(4))
+</script>
+<script id="ch0105/34">
+    let n = +prompt('n'), result = 0
+    for (let i = 1; i <= 5; i++) {
+        let tmp =1
+        for (let j = 1; j <= i; j++) {
+		       tmp*=j
+        }
+        result+=tmp
+    }
+    console.log(result)
+</script>
+<script id="ch0105/35">
 
 </script>
-<script id="ch0105/24"></script>
-<script id="ch0105/25"></script>
-<script id="ch0105/26"></script>
-<script id="ch0105/27"></script>
-<script id="ch0105/28"></script>
-<script id="ch0105/29"></script>
-<script id="ch0105/30"></script>
-<script id="ch0105/31"></script>
-<script id="ch0105/32"></script>
-<script id="ch0105/33"></script>
-<script id="ch0105/34"></script>
-<script id="ch0105/35"></script>
 <script id="ch0105/36"></script>
 <script id="ch0105/37"></script>
 <script id="ch0105/38"></script>
