--- a/miao/noi.html
+++ b/miao/noi.html
@@ -480,7 +480,14 @@
     console.log(normal)
 </script>
 <script id="ch0105/25">
-    <!--	TODO-->
+    for (let i = 50;  ; i++) {
+		    if(i){
+            console.log(i)
+            console.log()
+            console.log(i)
+				    break
+		    }
+    }
 </script>
 <script id="ch0105/26">
     let n = +prompt('n'), count = 0
