--- a/miao/css-sprite.html
+++ b/miao/css-sprite.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Document</title>
+  <style>
       body {
-        background-color: #f6f6f6;
-        font-size: 0;
+          background-color: #f6f6f6;
+          font-size: 0;
       }
+
       span {
-        /* border: 1px solid black; */
-        display: inline-block;
-        height: 150px;
-        width: 120px;
-        background: url(https://www.nicepng.com/png/detail/106-1067229_blob-game-sprite-sheets-sprite-game-character.png)
-          no-repeat;
+          /* border: 1px solid black; */
+          display: inline-block;
+          height: 150px;
+          width: 120px;
+          background: url(https://www.nicepng.com/png/detail/106-1067229_blob-game-sprite-sheets-sprite-game-character.png) no-repeat;
       }
+
       .I {
-        background-position: -165px -45px;
+          background-position: -165px -45px;
       }
+
       .II {
-        background-position: -350px -45px;
+          background-position: -350px -45px;
       }
+
       .III {
-        background-position: -545px -45px;
+          background-position: -545px -45px;
       }
+
       .IV {
-        background-position: -165px -200px;
+          background-position: -165px -200px;
       }
+
       .V {
-        background-position: -350px -200px;
+          background-position: -350px -200px;
       }
+
       .VI {
-        background-position: -545px -200px;
+          background-position: -545px -200px;
       }
+
       div {
-        height: 400px;
-        background: url(https://www.nicepng.com/png/detail/106-1067229_blob-game-sprite-sheets-sprite-game-character.png)
-          no-repeat;
+          height: 400px;
+          background: url(https://www.nicepng.com/png/detail/106-1067229_blob-game-sprite-sheets-sprite-game-character.png) no-repeat;
       }
-    </style>
-  </head>
-  <body>
-    <span class="I"></span><span class="II"></span><span class="III"></span
-    ><span class="IV"></span><span class="V"></span><span class="VI"></span>
-    <div></div>
-  </body>
+  </style>
+</head>
+<body>
+<span class="I"></span><span class="II"></span><span class="III"></span
+><span class="IV"></span><span class="V"></span><span class="VI"></span>
+<div></div>
+</body>
 </html>
