--- a/miao/noi.html
+++ b/miao/noi.html
@@ -700,27 +700,16 @@
 
 </script>
 <script id="ch0105/45">
-  let n = +prompt('days'), current_day = 1, current_gold = 1, result = 0, range = 1
-  while (current_day <= n) {
-    result += current_gold * range
-    range = range + 1
-    current_gold = range
-    if (current_day + range > n) {
-      result += current_gold * (n - current_day)
-      break
+  let n = +prompt('days'), day = 0, icon = 1, result = 0
+  for (let i = 1; i <= n; i++) {
+    result += icon
+    day++
+    if (day === icon) {
+      icon++
+      day = 0
     }
-    current_day += range
   }
   console.log(result)
-  // let n = +prompt('days'), day = 0, icon = 1, result = 0
-  // for (let i = 1; i <= n; i++) {
-  //   result += icon
-  //   day++
-  //   if (day === i) {
-  //     icon++
-  //   }
-  // }
-  // console.log(result)
 </script>
 <!--narcissistic: 输入一个数，判断是否是水仙花数-->
 <script id="narcissistic">
@@ -745,14 +734,15 @@
 </script>
 <!--palindrom: 判断一个数是否是回文数字-->
 <script id="palindrom">
-  // function palindrom(num) {
-  //   let len = num.length
-  //   let half = len / 2 + 0.5
-  //   for (let i = 0, j = len - 1; i < half && j > half; i++, j--) {
-  //     if (num[i] !== num[j]) return 'NO'
-  //   }
-  //   return 'YES'
-  // }
+  function palindrom(num) {
+    let len = num.length
+    let half = len / 2 + 0.5
+    for (let i = 0, j = len - 1; i < half && j > half; i++, j--) {
+      if (num[i] !== num[j]) return 'NO'
+    }
+    return 'YES'
+  }
+
   function palindorm(n) {
     let width = Math.floor(Math.log10(n)) + 1
     for (let i = 1; i <= width / 2; i++) {
